5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4464/executions/1692_1105.log
== TEST (2019-04-25 15:11:25) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
bra = input("qualo brasion,felote: ")
print("Entrada:", bra)
if (bra == "lobo" or "leao"	or "veado" or "dragao" or "rosa" or "sol" or "lula" or "esfolado" or "turta"	):
	if (bra == "lobo"):
		mensagem = "Stark"
		print("Casa:" , mensagem)
	elif (bra == "leao"):
		mensagem = "Lannister"
		print("Casa:" , mensagem)
	elif (bra == "veado"):
		mensagem = "Baratheon"
		print("Casa:" , mensagem)
	elif (bra == "dragao"):
		mensagem = "Targaryen"
		print("Casa:" , mensagem)
	elif (bra == "rosa"):
		mensagem = "Tyrell"
		print("Casa:" , mensagem)
	elif (bra == "sol"):
		mensagem = "Martell"
		print("Casa:" , mensagem)
	elif (bra == "lula"):
		mensagem = "Greyjoy"
	elif (bra == "esfolado")
		mensagem = "Bolton"
	elif (bra == "turta")
		mensagem = "Tully"
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")

-- ERROR:
File "XXXX", line 26
    elif (bra == "esfolado")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 15:11:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
bra = input("qualo brasion,felote: ")
print("Entrada:", bra)
if (bra == "lobo" or "leao"	or "veado" or "dragao" or "rosa" or "sol" or "lula" or "esfolado" or "turta"	):
	if (bra == "lobo"):
		mensagem = "Stark"
		print("Casa:" , mensagem)
	elif (bra == "leao"):
		mensagem = "Lannister"
		print("Casa:" , mensagem)
	elif (bra == "veado"):
		mensagem = "Baratheon"
		print("Casa:" , mensagem)
	elif (bra == "dragao"):
		mensagem = "Targaryen"
		print("Casa:" , mensagem)
	elif (bra == "rosa"):
		mensagem = "Tyrell"
		print("Casa:" , mensagem)
	elif (bra == "sol"):
		mensagem = "Martell"
		print("Casa:" , mensagem)
	elif (bra == "lula"):
		mensagem = "Greyjoy"
	elif (bra == "esfolado"):
		mensagem = "Bolton"
	elif (bra == "turta")
		mensagem = "Tully"
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")

-- ERROR:
File "XXXX", line 28
    elif (bra == "turta")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 15:11:34) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
bra = input("qualo brasion,felote: ")
print("Entrada:", bra)
if (bra == "lobo" or "leao"	or "veado" or "dragao" or "rosa" or "sol" or "lula" or "esfolado" or "turta"	):
	if (bra == "lobo"):
		mensagem = "Stark"
		print("Casa:" , mensagem)
	elif (bra == "leao"):
		mensagem = "Lannister"
		print("Casa:" , mensagem)
	elif (bra == "veado"):
		mensagem = "Baratheon"
		print("Casa:" , mensagem)
	elif (bra == "dragao"):
		mensagem = "Targaryen"
		print("Casa:" , mensagem)
	elif (bra == "rosa"):
		mensagem = "Tyrell"
		print("Casa:" , mensagem)
	elif (bra == "sol"):
		mensagem = "Martell"
		print("Casa:" , mensagem)
	elif (bra == "lula"):
		mensagem = "Greyjoy"
	elif (bra == "esfolado"):
		mensagem = "Bolton"
	elif (bra == "turta"):
		mensagem = "Tully"
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 15:11:43) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
bra = input("qualo brasion,felote: ")
print("Entrada:", bra)
if (bra == "lobo" or "leao"	or "veado" or "dragao" or "rosa" or "sol" or "lula" or "esfolado" or "turta"	):
	if (bra == "lobo"):
		mensagem = "Stark"
		print("Casa:" , mensagem)
	elif (bra == "leao"):
		mensagem = "Lannister"
		print("Casa:" , mensagem)
	elif (bra == "veado"):
		mensagem = "Baratheon"
		print("Casa:" , mensagem)
	elif (bra == "dragao"):
		mensagem = "Targaryen"
		print("Casa:" , mensagem)
	elif (bra == "rosa"):
		mensagem = "Tyrell"
		print("Casa:" , mensagem)
	elif (bra == "sol"):
		mensagem = "Martell"
		print("Casa:" , mensagem)
	elif (bra == "lula"):
		mensagem = "Greyjoy"
	elif (bra == "esfolado"):
		mensagem = "Bolton"
	elif (bra == "turta"):
		mensagem = "Tully"
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 15:12:51) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
bra = input()
print("Entrada:", bra)
if (bra == "lobo" or "leao"	or "veado" or "dragao" or "rosa" or "sol" or "lula" or "esfolado" or "turta"	):
	if (bra == "lobo"):
		mensagem = "Stark"
		print("Casa:" , mensagem)
	elif (bra == "leao"):
		mensagem = "Lannister"
		print("Casa:" , mensagem)
	elif (bra == "veado"):
		mensagem = "Baratheon"
		print("Casa:" , mensagem)
	elif (bra == "dragao"):
		mensagem = "Targaryen"
		print("Casa:" , mensagem)
	elif (bra == "rosa"):
		mensagem = "Tyrell"
		print("Casa:" , mensagem)
	elif (bra == "sol"):
		mensagem = "Martell"
		print("Casa:" , mensagem)
	elif (bra == "lula"):
		mensagem = "Greyjoy"
	elif (bra == "esfolado"):
		mensagem = "Bolton"
	elif (bra == "turta"):
		mensagem = "Tully"
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 15:13:05) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
bra = input()
print("Entrada:", bra)
if (bra == "lobo" or "leao"	or "veado" or "dragao" or "rosa" or "sol" or "lula" or "esfolado" or "turta"	):
	if (bra == "lobo"):
		mensagem = "Stark"
		print("Casa:" , mensagem)
	elif (bra == "leao"):
		mensagem = "Lannister"
		print("Casa:" , mensagem)
	elif (bra == "veado"):
		mensagem = "Baratheon"
		print("Casa:" , mensagem)
	elif (bra == "dragao"):
		mensagem = "Targaryen"
		print("Casa:" , mensagem)
	elif (bra == "rosa"):
		mensagem = "Tyrell"
		print("Casa:" , mensagem)
	elif (bra == "sol"):
		mensagem = "Martell"
		print("Casa:" , mensagem)
	elif (bra == "lula"):
		mensagem = "Greyjoy"
	elif (bra == "esfolado"):
		mensagem = "Bolton"
	elif (bra == "turta"):
		mensagem = "Tully"
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 15:13:12) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
bra = input()
print("Entrada:", bra)
if (bra == "lobo" or "leao"	or "veado" or "dragao" or "rosa" or "sol" or "lula" or "esfolado" or "turta"	):
	if (bra == "lobo"):
		mensagem = "Stark"
		print("Casa:" , mensagem)
	elif (bra == "leao"):
		mensagem = "Lannister"
		print("Casa:" , mensagem)
	elif (bra == "veado"):
		mensagem = "Baratheon"
		print("Casa:" , mensagem)
	elif (bra == "dragao"):
		mensagem = "Targaryen"
		print("Casa:" , mensagem)
	elif (bra == "rosa"):
		mensagem = "Tyrell"
		print("Casa:" , mensagem)
	elif (bra == "sol"):
		mensagem = "Martell"
		print("Casa:" , mensagem)
	elif (bra == "lula"):
		mensagem = "Greyjoy"
	elif (bra == "esfolado"):
		mensagem = "Bolton"
	elif (bra == "turta"):
		mensagem = "Tully"
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 15:13:25) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
bra = input()
print("Entrada:", bra)
if (bra == "lobo" or "leao"	or "veado" or "dragao" or "rosa" or "sol" or "lula" or "esfolado" or "turta"	):
	if (bra == "lobo"):
		mensagem = "Stark"
		print("Casa:" , mensagem)
	elif (bra == "leao"):
		mensagem = "Lannister"
		print("Casa:" , mensagem)
	elif (bra == "veado"):
		mensagem = "Baratheon"
		print("Casa:" , mensagem)
	elif (bra == "dragao"):
		mensagem = "Targaryen"
		print("Casa:" , mensagem)
	elif (bra == "rosa"):
		mensagem = "Tyrell"
		print("Casa:" , mensagem)
	elif (bra == "sol"):
		mensagem = "Martell"
		print("Casa:" , mensagem)
	elif (bra == "lula"):
		mensagem = "Greyjoy"
	elif (bra == "esfolado"):
		mensagem = "Bolton"
	elif (bra == "turta"):
		mensagem = "Tully"
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 15:13:32) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
bra = input()
print("Entrada:", bra)
if (bra == "lobo" or "leao"	or "veado" or "dragao" or "rosa" or "sol" or "lula" or "esfolado" or "turta"	):
	if (bra == "lobo"):
		mensagem = "Stark"
		print("Casa:" , mensagem)
	elif (bra == "leao"):
		mensagem = "Lannister"
		print("Casa:" , mensagem)
	elif (bra == "veado"):
		mensagem = "Baratheon"
		print("Casa:" , mensagem)
	elif (bra == "dragao"):
		mensagem = "Targaryen"
		print("Casa:" , mensagem)
	elif (bra == "rosa"):
		mensagem = "Tyrell"
		print("Casa:" , mensagem)
	elif (bra == "sol"):
		mensagem = "Martell"
		print("Casa:" , mensagem)
	elif (bra == "lula"):
		mensagem = "Greyjoy"
	elif (bra == "esfolado"):
		mensagem = "Bolton"
	elif (bra == "turta"):
		mensagem = "Tully"
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.143898
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 15:14:21) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
bra = input("nome da casa")
print("Entrada:", bra)
if (bra == "lobo" or "leao"	or "veado" or "dragao" or "rosa" or "sol" or "lula" or "esfolado" or "turta"	):
	if (bra == "lobo"):
		mensagem = "Stark"
		print("Casa:" , mensagem)
	elif (bra == "leao"):
		mensagem = "Lannister"
		print("Casa:" , mensagem)
	elif (bra == "veado"):
		mensagem = "Baratheon"
		print("Casa:" , mensagem)
	elif (bra == "dragao"):
		mensagem = "Targaryen"
		print("Casa:" , mensagem)
	elif (bra == "rosa"):
		mensagem = "Tyrell"
		print("Casa:" , mensagem)
	elif (bra == "sol"):
		mensagem = "Martell"
		print("Casa:" , mensagem)
	elif (bra == "lula"):
		mensagem = "Greyjoy"
	elif (bra == "esfolado"):
		mensagem = "Bolton"
	elif (bra == "turta"):
		mensagem = "Tully"
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 15:14:29) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
bra = input("nome da casa: ")
print("Entrada:", bra)
if (bra == "lobo" or "leao"	or "veado" or "dragao" or "rosa" or "sol" or "lula" or "esfolado" or "turta"	):
	if (bra == "lobo"):
		mensagem = "Stark"
		print("Casa:" , mensagem)
	elif (bra == "leao"):
		mensagem = "Lannister"
		print("Casa:" , mensagem)
	elif (bra == "veado"):
		mensagem = "Baratheon"
		print("Casa:" , mensagem)
	elif (bra == "dragao"):
		mensagem = "Targaryen"
		print("Casa:" , mensagem)
	elif (bra == "rosa"):
		mensagem = "Tyrell"
		print("Casa:" , mensagem)
	elif (bra == "sol"):
		mensagem = "Martell"
		print("Casa:" , mensagem)
	elif (bra == "lula"):
		mensagem = "Greyjoy"
	elif (bra == "esfolado"):
		mensagem = "Bolton"
	elif (bra == "turta"):
		mensagem = "Tully"
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 15:16:40) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da casa: ")
print("Entrada:", bra)
if (bra == "lobo" or "leao" or "veado" or "dragao" or "rosa" or "sol" or "lula" or "esfolado" or "turta"	):
	if (x == "lobo"):
		mensagem = "Stark"
		print("Casa:" , mensagem)
	elif (x == "leao"):
		mensagem = "Lannister"
		print("Casa:" , mensagem)
	elif (x == "veado"):
		mensagem = "Baratheon"
		print("Casa:" , mensagem)
	elif (x == "dragao"):
		mensagem = "Targaryen"
		print("Casa:" , mensagem)
	elif (x == "rosa"):
		mensagem = "Tyrell"
		print("Casa:" , mensagem)
	elif (x == "sol"):
		mensagem = "Martell"
		print("Casa:" , mensagem)
	elif (x == "lula"):
		mensagem = "Greyjoy"
	elif (x == "esfolado"):
		mensagem = "Bolton"
	elif (x == "turta"):
		mensagem = "Tully"
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Entrada:", bra)
NameError: name 'bra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 15:16:42) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da casa: ")
print("Entrada:", bra)
if (bra == "lobo" or "leao" or "veado" or "dragao" or "rosa" or "sol" or "lula" or "esfolado" or "turta"	):
	if (x == "lobo"):
		mensagem = "Stark"
		print("Casa:" , mensagem)
	elif (x == "leao"):
		mensagem = "Lannister"
		print("Casa:" , mensagem)
	elif (x == "veado"):
		mensagem = "Baratheon"
		print("Casa:" , mensagem)
	elif (x == "dragao"):
		mensagem = "Targaryen"
		print("Casa:" , mensagem)
	elif (x == "rosa"):
		mensagem = "Tyrell"
		print("Casa:" , mensagem)
	elif (x == "sol"):
		mensagem = "Martell"
		print("Casa:" , mensagem)
	elif (x == "lula"):
		mensagem = "Greyjoy"
	elif (x == "esfolado"):
		mensagem = "Bolton"
	elif (x == "turta"):
		mensagem = "Tully"
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.173376
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1105/main.py", line 4, in <module>
    print("Entrada:", bra)
NameError: name 'bra' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 15:16:54) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da casa: ")
print("Entrada:", bra)
if (x == "lobo" or "leao" or "veado" or "dragao" or "rosa" or "sol" or "lula" or "esfolado" or "turta"	):
	if (x == "lobo"):
		mensagem = "Stark"
		print("Casa:" , mensagem)
	elif (x == "leao"):
		mensagem = "Lannister"
		print("Casa:" , mensagem)
	elif (x == "veado"):
		mensagem = "Baratheon"
		print("Casa:" , mensagem)
	elif (x == "dragao"):
		mensagem = "Targaryen"
		print("Casa:" , mensagem)
	elif (x == "rosa"):
		mensagem = "Tyrell"
		print("Casa:" , mensagem)
	elif (x == "sol"):
		mensagem = "Martell"
		print("Casa:" , mensagem)
	elif (x == "lula"):
		mensagem = "Greyjoy"
	elif (x == "esfolado"):
		mensagem = "Bolton"
	elif (x == "turta"):
		mensagem = "Tully"
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.18923
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1105/main.py", line 4, in <module>
    print("Entrada:", bra)
NameError: name 'bra' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 15:17:13) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da casa: ")
print("Entrada:", x)
if (x == "lobo" or "leao" or "veado" or "dragao" or "rosa" or "sol" or "lula" or "esfolado" or "turta"	):
	if (x == "lobo"):
		mensagem = "Stark"
		print("Casa:" , mensagem)
	elif (x == "leao"):
		mensagem = "Lannister"
		print("Casa:" , mensagem)
	elif (x == "veado"):
		mensagem = "Baratheon"
		print("Casa:" , mensagem)
	elif (x == "dragao"):
		mensagem = "Targaryen"
		print("Casa:" , mensagem)
	elif (x == "rosa"):
		mensagem = "Tyrell"
		print("Casa:" , mensagem)
	elif (x == "sol"):
		mensagem = "Martell"
		print("Casa:" , mensagem)
	elif (x == "lula"):
		mensagem = "Greyjoy"
	elif (x == "esfolado"):
		mensagem = "Bolton"
	elif (x == "turta"):
		mensagem = "Tully"
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 15:17:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da casa: ")
print("Entrada:", x)
if (x == "lobo" or "leao" or "veado" or "dragao" or "rosa" or "sol" or "lula" or "esfolado" or "turta"	):
	if (x == "lobo"):
		mensagem = "Stark"
		print("Casa:" , mensagem)
	elif (x == "leao"):
		mensagem = "Lannister"
		print("Casa:" , mensagem)
	elif (x == "veado"):
		mensagem = "Baratheon"
		print("Casa:" , mensagem)
	elif (x == "dragao"):
		mensagem = "Targaryen"
		print("Casa:" , mensagem)
	elif (x == "rosa"):
		mensagem = "Tyrell"
		print("Casa:" , mensagem)
	elif (x == "sol"):
		mensagem = "Martell"
		print("Casa:" , mensagem)
	elif (x == "lula"):
		mensagem = "Greyjoy"
	elif (x == "esfolado"):
		mensagem = "Bolton"
	elif (x == "turta"):
		mensagem = "Tully"
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.166582
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 15:19:17) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da casa: ")
print("Entrada:", x)
if (x == "lobo" or "leao" or "veado" or "dragao" or "rosa" or "sol" or "lula" or "esfolado" or "turta"	):
	if (x == "lobo"):
		mensagem = "Stark"
		print("Casa:" , mensagem)
	elif (x == "leao"):
		mensagem = "Lannister"
		print("Casa:" , mensagem)
	elif (x == "veado"):
		mensagem = "Baratheon"
		print("Casa:" , mensagem)
	elif (x == "dragao"):
		mensagem = "Targaryen"
		print("Casa:" , mensagem)
	elif (x == "rosa"):
		mensagem = "Tyrell"
		print("Casa:" , mensagem)
	elif (x == "sol"):
		mensagem = "Martell"
		print("Casa:" , mensagem)
	elif (x == "lula"):
		mensagem = "Greyjoy"
	elif (x == "esfolado"):
		mensagem = "Bolton"
	elif (x == "turta"):
		mensagem = "Tully"
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 15:19:36) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da casa: ")
print("Entrada:", x)
if (x == "lobo" or "leao" or "veado" or "dragao" or "rosa" or "sol" or "lula" or "esfolado" or "turta"	):
	if (x == "lobo"):
		mensagem = "Stark"
		print("Casa:" , mensagem)
	elif (x == "leao"):
		mensagem = "Lannister"
		print("Casa:" , mensagem)
	elif (x == "veado"):
		mensagem = "Baratheon"
		print("Casa:" , mensagem)
	elif (x == "dragao"):
		mensagem = "Targaryen"
		print("Casa:" , mensagem)
	elif (x == "rosa"):
		mensagem = "Tyrell"
		print("Casa:" , mensagem)
	elif (x == "sol"):
		mensagem = "Martell"
		print("Casa:" , mensagem)
	elif (x == "lula"):
		mensagem = "Greyjoy"
	elif (x == "esfolado"):
		mensagem = "Bolton"
	elif (x == "turta"):
		mensagem = "Tully"
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 15:21:10) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da casa: ")
print("Entrada:", x)
if (x == "lobo" or "leao" or "veado" or "dragao" or "rosa" or "sol" or "lula" or "esfolado" or "turta"	):
	if (x == "lobo"):
		mensagem = "Stark"
		print("Casa:" , mensagem)
	elif (x == "leao"):
		mensagem = "Lannister"
		print("Casa:" , mensagem)
	elif (x == "veado"):
		mensagem = "Baratheon"
		print("Casa:" , mensagem)
	elif (x == "dragao"):
		mensagem = "Targaryen"
		print("Casa:" , mensagem)
	elif (x == "rosa"):
		mensagem = "Tyrell"
		print("Casa:" , mensagem)
	elif (x == "sol"):
		mensagem = "Martell"
		print("Casa:" , mensagem)
	elif (x == "lula"):
		mensagem = "Greyjoy"
		print("Casa:" , mensagem)
	elif (x == "esfolado"):
		mensagem = "Bolton"
		print("Casa:" , mensagem)
	elif (x == "turta"):
		mensagem = "Tully"
		print("casa:" , mensagem)
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.274272
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 15:35:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da casa: ")
print("Entrada:", x)
if (x == "lobo" or "leao" or "veado" or "dragao" or "rosa" or "sol" or "lula" or "esfolado" or "turta"	):
	if (x == "lobo"):
		mensagem = "Stark"
		print("Casa:" , mensagem)
	elif (x == "leao"):
		mensagem = "Lannister"
		print("Casa:" , mensagem)
	elif (x == "veado"):
		mensagem = "Baratheon"
		print("Casa:" , mensagem)
	elif (x == "dragao"):
		mensagem = "Targaryen"
		print("Casa:" , mensagem)
	elif (x == "rosa"):
		mensagem = "Tyrell"
		print("Casa:" , mensagem)
	elif (x == "sol"):
		mensagem = "Martell"
		print("Casa:" , mensagem)
	elif (x == "lula"):
		mensagem = "Greyjoy"
		print("Casa:" , mensagem)
	elif (x == "esfolado"):
		mensagem = "Bolton"
		print("Casa:" , mensagem)
	elif (x == "turta"):
		mensagem = "Tully"
		print("casa: Tully")
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 15:35:27) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da casa: ")
print("Entrada:", x)
if (x == "lobo" or "leao" or "veado" or "dragao" or "rosa" or "sol" or "lula" or "esfolado" or "turta"	):
	if (x == "lobo"):
		mensagem = "Stark"
		print("Casa:" , mensagem)
	elif (x == "leao"):
		mensagem = "Lannister"
		print("Casa:" , mensagem)
	elif (x == "veado"):
		mensagem = "Baratheon"
		print("Casa:" , mensagem)
	elif (x == "dragao"):
		mensagem = "Targaryen"
		print("Casa:" , mensagem)
	elif (x == "rosa"):
		mensagem = "Tyrell"
		print("Casa:" , mensagem)
	elif (x == "sol"):
		mensagem = "Martell"
		print("Casa:" , mensagem)
	elif (x == "lula"):
		mensagem = "Greyjoy"
		print("Casa:" , mensagem)
	elif (x == "esfolado"):
		mensagem = "Bolton"
		print("Casa:" , mensagem)
	elif (x == "turta"):
		mensagem = "Tully"
		print("casa: Tully")
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.145961
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 15:35:41) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da casa: ")
print("Entrada:", x)
if (x == "lobo" or "leao" or "veado" or "dragao" or "rosa" or "sol" or "lula" or "esfolado" or "turta"	):
	if (x == "lobo"):
		mensagem = "Stark"
		print("Casa:" , mensagem)
	elif (x == "leao"):
		mensagem = "Lannister"
		print("Casa:" , mensagem)
	elif (x == "veado"):
		mensagem = "Baratheon"
		print("Casa:" , mensagem)
	elif (x == "dragao"):
		mensagem = "Targaryen"
		print("Casa:" , mensagem)
	elif (x == "rosa"):
		mensagem = "Tyrell"
		print("Casa:" , mensagem)
	elif (x == "sol"):
		mensagem = "Martell"
		print("Casa:" , mensagem)
	elif (x == "lula"):
		mensagem = "Greyjoy"
		print("Casa:" "Greyjoy")
	elif (x == "esfolado"):
		mensagem = "Bolton"
		print("Casa:" , mensagem)
	elif (x == "turta"):
		mensagem = "Tully"
		print("casa: Tully")
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.171887
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa:Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 15:35:47) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da casa: ")
print("Entrada:", x)
if (x == "lobo" or "leao" or "veado" or "dragao" or "rosa" or "sol" or "lula" or "esfolado" or "turta"	):
	if (x == "lobo"):
		mensagem = "Stark"
		print("Casa:" , mensagem)
	elif (x == "leao"):
		mensagem = "Lannister"
		print("Casa:" , mensagem)
	elif (x == "veado"):
		mensagem = "Baratheon"
		print("Casa:" , mensagem)
	elif (x == "dragao"):
		mensagem = "Targaryen"
		print("Casa:" , mensagem)
	elif (x == "rosa"):
		mensagem = "Tyrell"
		print("Casa:" , mensagem)
	elif (x == "sol"):
		mensagem = "Martell"
		print("Casa:" , mensagem)
	elif (x == "lula"):
		mensagem = "Greyjoy"
		print("Casa: Greyjoy")
	elif (x == "esfolado"):
		mensagem = "Bolton"
		print("Casa:" , mensagem)
	elif (x == "turta"):
		mensagem = "Tully"
		print("casa: Tully")
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.14325
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
